--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,20 @@
 	justify-content: center;
     font-size: 25px;
     font-family: sans-serif;
+	flex-flow: column;
+}
+
+#Videoads a + a {
+	margin-top: 20px;
 }
 .nativemain,.cjrm.sa.epsa, #c_window_xEucqIjg, .nativemain{
 	display:none!important;
+}
+
+body > div.wrapper {
+	display: block !important;
+}
+
+body > div:last-child {
+	display: none !important;
 }
